--- a/Calculator/CSS/Calculator_CSS.css
+++ b/Calculator/CSS/Calculator_CSS.css
@@ -58,13 +58,13 @@ button:hover {
     background-color: lightgray;
 }
 
-.all-clear-function {
+.all-clear {
     background-color: red;
     border-color: darkslategray;
     color: #ffffff;
 }
 
-.equal-sing-operator {
+.equal-sing{
     background-color: blue;
     border-color: darkslategray;
     color: #fff;
@@ -72,7 +72,7 @@ button:hover {
     grid-area: 2/4/6/5;
 }
 
-.equal-sing-operator:hover {
+.equal-sing:hover {
     background-color: darkblue;
 }
 
